k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
